# concurrency

./: CMakeLists.txt  README.md  main.cpp
src/: one_thread_array_work.h  workSplitter-std_thread.h
tests/: CMakeLists.txt  exceptions.cpp  locks.cpp  pure.cpp  simple.cpp
